[package]
name = "data-summarizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "data_summarizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
